# rviewer

./: .gitignore  Cargo.toml  README.md
clients/: cpp_client.h
clients/rust/: Cargo.toml
clients/rust/rviewerable-derive/: Cargo.toml
clients/rust/rviewerable-derive/src/: lib.rs
clients/rust/src/: lib.rs
examples/: README.md  example1.cpp  example1.txt  example2.txt  example3.cpp  example_align.cpp  example_in_betweens.txt
examples/example1/rust/: Cargo.toml  example1.txt
examples/example1/rust/src/: main.rs
examples/example2/: example2.txt
examples/example3/cpp/: example3.txt
examples/example3/rust/: Cargo.toml  example3.txt
examples/example3/rust/src/: main.rs
examples/example_align/cpp/: example_align.txt
examples/example_align/rust/: Cargo.toml  example_align.txt
examples/example_align/rust/src/: main.rs
examples/example_in_betweens/cpp/: example_in_betweens.cpp
examples/example_in_betweens/rust/: Cargo.toml  example_in_betweens.txt
examples/example_in_betweens/rust/src/: main.rs
images/: README.md
src/: app_data.rs  checklist.rs  figure.rs  in_between.rs  islider.rs  main.rs  parse.rs  poly.rs  settings.rs  svg_params.rs  transform.rs
src/figure/: circle.rs  common.rs  grid.rs  line.rs  message.rs  poly.rs  rect.rs  text.rs
