[package]
name = "rviewer"
version = "0.1.0"
authors = ["Maksim Gorokhovskiy <magor1744@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = { git = "https://github.com/linebender/druid.git" }
svg = "0.9.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
threadpool = "1.8.1"