[package]
name = "rviewer"
version = "0.1.0"
authors = ["Maksim Gorokhovskiy <magor1744@gmail.com>"]
edition = "2021"

[dependencies]
druid = { git = "https://github.com/linebender/druid.git" }
svg = "0.9.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
threadpool = "1.8.1"
subprocess = "0.2.7"
